[package]
name = "cargo-forced-feature-repro"
version = "0.1.0"
authors = ["Matt Campbell <mattcampbell@pobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.7", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
speech-dispatcher = "0.4"
